Changes for 3.4.13rc1

New features:
...G...PS. [ZBX-13730] replaced pcreposix library with pcre, lowered backtracking limit, fixed libevent build issues (yurii)

Bug fixes:
...G...... [ZBX-372] added "zone" parameter to proc.num[] item for Solaris (viktors)
..F....... [ZBX-14631] fixed typo in string: ouf, not out (vasilijs)
........S. [ZBX-14410] improved output of information about the error for expressions with functions (MVekslers)
..F....... [ZBX-14433] fixed several problems in displaying of X axis on the graphs (Sasha)

--------------------------------------------------------------------------------
Changes for 3.4.12

3.4.12rc1 was released as 3.4.12 without any changes

--------------------------------------------------------------------------------
Changes for 3.4.12rc1

Bug fixes:
........S. [ZBX-14548] fixed the disk usage counters reading for ESX/ESXi hosts (MVekslers)
..F....... [ZBX-9236] fixed timeselector period used to select 'all' values of particular item (miks)
...G...... [ZBX-13393] fixed agent compilation error on AlphaServer Tru64 5.1B (Andris)
..F....... [ZBX-13165] fixed Y-axis small value gradation issue in graphs (Ivo)
..F....... [ZBX-14575] fixed Norwegian locale key for windows (vmurzins)
.......PS. [ZBX-14566] fixed possible data loss due to MariaDB server restart (vso)
.......PS. [ZBX-13010] fixed crash of poller processes in ODBC checks, simplified code (Andris, wiper)
....I..... [ZBX-14370] fixed deleting of files after compiling a program (make clean) for Solaris (MVekslers)
..F....... [ZBX-14519] fixed displaying timeline points of days in Problems widget (vasilijs)
..F....... [ZBX-14491] fixed link "show value mappings", which leads to no permission page (vasilijs)
........S. [ZBX-12380] improved function parameter parsing for trigger functions (MVekslers)
..F....... [ZBX-13641] disabled preprocessing update for discovered items (vasilijs)