@@ -4,6 +4,7 @@ New features:
 ...G...PS. [ZBX-13730] replaced pcreposix library with pcre, lowered backtracking limit, fixed libevent build issues (yurii)
 
 Bug fixes:
+........S. [ZBX-14614] fixed trigger dependency link to the template instead of the host during the discovery action (MVekslers)
 ...G...... [ZBX-372] added "zone" parameter to proc.num[] item for Solaris (viktors)
 ..F....... [ZBX-14631] fixed typo in string: ouf, not out (vasilijs)
 ........S. [ZBX-14410] improved output of information about the error for expressions with functions (MVekslers)
@@ -1311,6 +1312,7 @@ Changes for 3.0.21rc1
 New features:
 
 Bug fixes:
+........S. [ZBX-14614] fixed trigger dependency link to the template instead of the host during the discovery action (MVekslers)
 ...G...... [ZBX-372] added "zone" parameter to proc.num[] item for Solaris (viktors)
 ........S. [ZBX-14410] improved output of information about the error for expressions with functions (MVekslers)
 ..F....... [ZBX-14433] fixed several problems in displaying of X axis on the graphs (Sasha)
